--- a/ProyectoMVC/WebContent/index.html
+++ b/ProyectoMVC/WebContent/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Inicio</title>
-<link rel="stylesheet" href="estilos/inicioEstilo.css">
+<link rel="stylesheet" href="css/inicioEstilo.css">
 </head>
 <body>
 
